[project]
name = "sentinelx"
version = "0.1.0"
description = "Security-focused local web application for SOC analysts to triage indicators of compromise"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "S", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring a live browser (deselect with -m 'not e2e')",
]
